src/main/kotlin/gen/GreenLangParser.java
package gen;// Generated from /Users/islam/IdeaProjects/GreenLang/src/main/antlr/GreenLang.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GreenLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, BOOL_LITERAL=51, ID=52, 
		INT_LITERAL=53, FLOAT_LITERAL=54, STRING_LITERAL=55, LINE_COMMENT=56, 
		BLOCK_COMMENT=57, WS=58;
	public static final int
		RULE_program = 0, RULE_topLevelDecl = 1, RULE_sensorDecl = 2, RULE_actuatorDecl = 3, 
		RULE_typeRef = 4, RULE_processDecl = 5, RULE_processParams = 6, RULE_processParam = 7, 
		RULE_block = 8, RULE_statement = 9, RULE_windowStmt = 10, RULE_timeUnit = 11, 
		RULE_emitStmt = 12, RULE_assignment = 13, RULE_ifStmt = 14, RULE_exprStmt = 15, 
		RULE_fsmDecl = 16, RULE_stateDecl = 17, RULE_stateItem = 18, RULE_onEnterBlock = 19, 
		RULE_whenTransition = 20, RULE_systemDecl = 21, RULE_systemItem = 22, 
		RULE_connectStmt = 23, RULE_endpoint = 24, RULE_runStmt = 25, RULE_expr = 26, 
		RULE_functionCall = 27, RULE_primary = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "topLevelDecl", "sensorDecl", "actuatorDecl", "typeRef", "processDecl", 
			"processParams", "processParam", "block", "statement", "windowStmt", 
			"timeUnit", "emitStmt", "assignment", "ifStmt", "exprStmt", "fsmDecl", 
			"stateDecl", "stateItem", "onEnterBlock", "whenTransition", "systemDecl", 
			"systemItem", "connectStmt", "endpoint", "runStmt", "expr", "functionCall", 
			"primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'sensor'", "':'", "'from'", "';'", "'actuator'", "'to'", "'int'", 
			"'float'", "'bool'", "'string'", "'stream'", "'<'", "'>'", "'process'", 
			"'('", "')'", "','", "'in'", "'out'", "'{'", "'}'", "'window'", "'ms'", 
			"'sec'", "'min'", "'h'", "'emit'", "'='", "'if'", "'else'", "'fsm'", 
			"'state'", "'on'", "'enter'", "'when'", "'->'", "'system'", "'connect'", 
			"'.'", "'run'", "'*'", "'/'", "'+'", "'-'", "'<='", "'>='", "'=='", "'!='", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "BOOL_LITERAL", "ID", "INT_LITERAL", "FLOAT_LITERAL", 
			"STRING_LITERAL", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GreenLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GreenLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GreenLangParser.EOF, 0); }
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 139586453538L) != 0)) {
				{
				{
				setState(58);
				topLevelDecl();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclContext extends ParserRuleContext {
		public SensorDeclContext sensorDecl() {
			return getRuleContext(SensorDeclContext.class,0);
		}
		public ActuatorDeclContext actuatorDecl() {
			return getRuleContext(ActuatorDeclContext.class,0);
		}
		public ProcessDeclContext processDecl() {
			return getRuleContext(ProcessDeclContext.class,0);
		}
		public FsmDeclContext fsmDecl() {
			return getRuleContext(FsmDeclContext.class,0);
		}
		public SystemDeclContext systemDecl() {
			return getRuleContext(SystemDeclContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterTopLevelDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitTopLevelDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitTopLevelDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelDecl);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				sensorDecl();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				actuatorDecl();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				processDecl();
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				fsmDecl();
				}
				break;
			case T__36:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				systemDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SensorDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GreenLangParser.ID, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(GreenLangParser.STRING_LITERAL, 0); }
		public SensorDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sensorDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterSensorDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitSensorDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitSensorDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SensorDeclContext sensorDecl() throws RecognitionException {
		SensorDeclContext _localctx = new SensorDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sensorDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__0);
			setState(74);
			match(ID);
			setState(75);
			match(T__1);
			setState(76);
			typeRef();
			setState(77);
			match(T__2);
			setState(78);
			match(STRING_LITERAL);
			setState(79);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActuatorDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GreenLangParser.ID, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(GreenLangParser.STRING_LITERAL, 0); }
		public ActuatorDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actuatorDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterActuatorDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitActuatorDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitActuatorDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActuatorDeclContext actuatorDecl() throws RecognitionException {
		ActuatorDeclContext _localctx = new ActuatorDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actuatorDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__4);
			setState(82);
			match(ID);
			setState(83);
			match(T__1);
			setState(84);
			typeRef();
			setState(85);
			match(T__5);
			setState(86);
			match(STRING_LITERAL);
			setState(87);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeRefContext extends ParserRuleContext {
		public TypeRefContext typeRef(int i) {
			return getRuleContext(TypeRefContext.class,0);
		}
		public TypeRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterTypeRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitTypeRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitTypeRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeRefContext typeRef() throws RecognitionException {
		TypeRefContext _localctx = new TypeRefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeRef);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(T__6);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(T__7);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				match(T__8);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				match(T__9);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				match(T__10);
				setState(94);
				match(T__11);
				setState(95);
				typeRef();
				setState(96);
				match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcessDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GreenLangParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProcessParamsContext processParams() {
			return getRuleContext(ProcessParamsContext.class,0);
		}
		public ProcessDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterProcessDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitProcessDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitProcessDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessDeclContext processDecl() throws RecognitionException {
		ProcessDeclContext _localctx = new ProcessDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_processDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__13);
			setState(101);
			match(ID);
			setState(102);
			match(T__14);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17 || _la==T__18) {
				{
				setState(103);
				processParams();
				}
			}

			setState(106);
			match(T__15);
			setState(107);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcessParamsContext extends ParserRuleContext {
		public List<ProcessParamContext> processParam() {
			return getRuleContexts(ProcessParamContext.class);
		}
		public ProcessParamContext processParam(int i) {
			return getRuleContext(ProcessParamContext.class,i);
		}
		public ProcessParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterProcessParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitProcessParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitProcessParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessParamsContext processParams() throws RecognitionException {
		ProcessParamsContext _localctx = new ProcessParamsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_processParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			processParam();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16) {
				{
				{
				setState(110);
				match(T__16);
				setState(111);
				processParam();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcessParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GreenLangParser.ID, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public ProcessParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterProcessParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitProcessParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitProcessParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessParamContext processParam() throws RecognitionException {
		ProcessParamContext _localctx = new ProcessParamContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_processParam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_la = _input.LA(1);
			if ( !(_la==T__17 || _la==T__18) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(118);
			match(ID);
			setState(119);
			match(T__1);
			setState(120);
			match(T__10);
			setState(121);
			match(T__11);
			setState(122);
			typeRef();
			setState(123);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__19);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 69805794899558416L) != 0)) {
				{
				{
				setState(126);
				statement();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(T__20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public WindowStmtContext windowStmt() {
			return getRuleContext(WindowStmtContext.class,0);
		}
		public EmitStmtContext emitStmt() {
			return getRuleContext(EmitStmtContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement);
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				windowStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				emitStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				assignment();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				ifStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				exprStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(139);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WindowStmtContext extends ParserRuleContext {
		public TerminalNode INT_LITERAL() { return getToken(GreenLangParser.INT_LITERAL, 0); }
		public TimeUnitContext timeUnit() {
			return getRuleContext(TimeUnitContext.class,0);
		}
		public WindowStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_windowStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterWindowStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitWindowStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitWindowStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WindowStmtContext windowStmt() throws RecognitionException {
		WindowStmtContext _localctx = new WindowStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_windowStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__21);
			setState(143);
			match(INT_LITERAL);
			setState(144);
			timeUnit();
			setState(145);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TimeUnitContext extends ParserRuleContext {
		public TimeUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).enterTimeUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GreenLangListener) ((GreenLangListener)listener).exitTimeUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GreenLangVisitor ) return ((GreenLangVisitor<? extends T>)visitor).visitTimeUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeUnitContext timeUnit() throws RecognitionException {
		TimeUnitContext _localctx = new TimeUnitContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_timeUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 125829120L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
